packages/pulse-core/force-app/main/default/objects/Workflow_Event__c/Workflow_Event__c.object-meta.xml
<CustomObject>
    <label>Workflow Event</label>
    <pluralLabel>Workflow Events</pluralLabel>
    <nameField>
        <label>Event Number</label>
        <displayFormat>WE-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Append-only audit and event stream for transitions, tool calls, signals, and failures. Uses Lookup to survive operational cleanup.</description>
</CustomObject>