packages/pulse-core/force-app/main/default/objects/Workflow_Event__c/fields/Actor_User__c.field-meta.xml
<CustomField>
    <fullName>Actor_User__c</fullName>
    <label>Actor User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Workflow Events as Actor</relationshipLabel>
    <relationshipName>Workflow_Events_Actor</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>