packages/pulse-core/force-app/main/default/objects/Workflow_Event__c/fields/Detail_JSON__c.field-meta.xml
<CustomField>
    <fullName>Detail_JSON__c</fullName>
    <label>Detail JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>