packages/pulse-core/force-app/main/default/objects/Workflow_Event__c/fields/Source_State__c.field-meta.xml
<CustomField>
    <fullName>Source_State__c</fullName>
    <label>Source State</label>
    <type>Text</type>
    <length>80</length>
</CustomField>