packages/pulse-core/force-app/main/default/objects/Workflow_Event__c/fields/Target_State__c.field-meta.xml
<CustomField>
    <fullName>Target_State__c</fullName>
    <label>Target State</label>
    <type>Text</type>
    <length>80</length>
</CustomField>